--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
