--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.8.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -17,7 +19,9 @@
     "node-sass-chokidar": "0.0.3",
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-test-renderer": "^16.0.0",
+    "react-wrapper": "^1.0.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
