got rid of warnings and errors in console

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,10 +3,12 @@
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "react-app"
+    "react-app",
+    "plugin:jsx-a11y/recommended"
   ],
   "plugins": [
-    "react"
+    "react",
+    "jsx-a11y"
   ],
   "env": {
     "browser": true,
