--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
+    "enzyme-adapter-react-15": "^1.0.1",
     "eslint": "^4.8.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
@@ -20,8 +21,8 @@
     "prop-types": "^15.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-test-renderer": "^16.0.0",
-    "react-wrapper": "^1.0.1"
+    "react-wrapper": "^1.0.1",
+    "react-test-renderer": "^16.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
