--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "babel-preset-react": "^6.24.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
-    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.8.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
@@ -22,7 +21,13 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-wrapper": "^1.0.1",
-    "react-test-renderer": "^16.0.0"
+    "react-test-renderer": "^15.5.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mock__/fileMock.js",
+      "\\.(css|scss|less)$": "<rootDir>/__mock__/styleMock.js"
+    }
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
